<resources>
    <string name="app_name">Bring Me Food</string>
    <string name="facebook_app_id">1521579937929084</string>
    <string name="fb_login_protocol_scheme">fb1521579937929084</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_cap">SIGN UP</string>
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="last_name">Last Name:</string>
    <string name="password">Password:</string>
    <string name="re_enter_password">Re-enter Password:</string>
    <string name="already_user">Have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_email">Enter Email:</string>
    <string name="enter_password">Enter Password:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="welcome_with_username">Welcome, %s.</string>
    <string name="sendTo_title">Send to…</string>
    <string name="sendTo_message">
		I\'m going on a food run to %1$s!\nIf you want to join in, use this code on the Bring Me Food app:\n%2$s
	</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="pay">Pay</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    
    <string name="sent_message">Message sent.</string>
	<string name="message_already_sent">You have already messaged this person.</string>
	
	<string name="add_friend">Add friend</string>
	<string name="remove_friend">Remove friend</string>
	<string name="friend_added">Friend added</string>
	<string name="friend_removed">Friend removed</string>
	
	<string name="location_find_fail">Unable to find your location.</string>
	<string name="error_no_food_list">You need to create a food list first.</string>
	<string name="error_no_location_specified">Please enter a delivery location.</string>
	
	<string name="error_login_fail">Authentication failed.</string>
	<string name="error_login_fail_user_info">Could not update user information.</string>
	<string name="login_message">Logged in as %s.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_getting_food">GettingFoodActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="getting_food">Getting Food</string>
    <string name="want_food">Want Food</string>
    <string name="create_order">Create Order</string>
    <string name="order_info">I\'m going to…</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="placeholder">placeholder</string>
    <string name="restaurant_radio">Restaurant</string>
    <string name="location_radio">Location</string>

    <string name="clipboard_copied">Copied to clipboard.</string>


    <string name="error_gettingFood_restaurantEmpty">Please enter a restaurant name.</string>
    <string name="error_gettingFood_locationEmpty">Please enter a location.</string>

    <string name="curSessionKey_identifier">SESSION_KEY</string>
    <string name="curSessionRestaurant_identifier">RESTAURANT_NAME</string>
    <string name="curSessionLocation_identifier">LOCATION_NAME</string>
    <string name="menu_home">Home</string>
    <string name="menu_userInfo">User Info</string>
    <string name="menu_signOut">Sign Out</string>
    <string name="gettingFood_sessionInfo_label1">You are going to:</string>
    <string name="gettingFood_sessionInfo_label2_placeholder">{restaurant} at {location}</string>
    <string name="gettingFood_sessionInfo_label2">%1$s at %2$s</string>
    <string name="gettingFood_sessionInfo_label3">Shareable code:</string>
    <string name="gettingFood_sessionInfo_label_code_placeholder">{code}</string>
    <string name="gettingFood_sessionInfo_closeSession">Close session</string>
    <string name="gettingFood_tab1">Information</string>
    <string name="gettingFood_tab2">Approved users</string>
    <string name="gettingFood_tab3">Pending users</string>
    <string name="go_back">Go Back</string>
    <string name="home">Home</string>
    <string name="fcm_api_key">key=AAAAS9tU0OY:APA91bH-nw7v_90JNMMNdpuM-kxky95uZ6jipw2xwam9NAgvybuWoX3qQGTzLrNUdGosJtWu6rxRRMGh1YVdvd77ZC2G7rwWW8jGQ948deNSd494kgZ_QQqFQ4zZ1FyT7LQogQD6BAc2</string>
    <string name="order_list_info">You have %1$d items in your order</string>
    <string name="menu_balance">Balance</string>
    <string name="charge">Charge</string>
    <string name="firebase_fcm_link">https://fcm.googleapis.com/fcm/send</string>
    <string name="pay_user">Pay User</string>
    <string name="pay_amount">Amount:</string>
	<string name="error_emailMissing">Enter email</string>
	<string name="error_fnameMissing">Enter first name</string>
	<string name="error_lnameMissing">Enter last name</string>
	<string name="error_passwordMissing">Enter password</string>
	<string name="error_repasswordMissing">Re-enter password</string>
	<string name="error_passwordsDontMatch">Password should match</string>
	<string name="error_passwordTooShort">Password should be at least 6 characters</string>
<<<<<<< HEAD
    <string name="order_accepted_notify">Your order is accepted</string>
    <string name="food_accepted_notify">Food Order Accepted</string>
=======
    <string name="load_wallet">Load Wallet</string>
    <string name="current_balance">Current Balance : </string>
    <string name="charge_user">Charge User</string>
    <string name="charge_success">Charge Successful</string>
    <string name="uid">uid</string>
    <string name="reload">Reload Wallet</string>
    <string name="currency">USD</string>
    <string name="paymentAdded">Payment added to your wallet</string>
    <string name="transac_unsuccessful">Transaction unsuccessful</string>
    <string name="confirmFail">Confirmation Failed from Paypal</string>
    <string name="approved">approved</string>
>>>>>>> b56bafbd90f63a487a448edb1e7ee2596cc4963d
</resources>
