<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/constraintLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.travmahrajvar.bringmefood.GettingFoodFragment_SessionInfo">
	
	<TextView
		android:id="@+id/section_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:text="@string/gettingFood_sessionInfo_label1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="@+id/constraintLayout"
		tools:layout_constraintLeft_creator="1"
		tools:layout_constraintTop_creator="1" />
	
	<TextView
		android:id="@+id/txtSessionDestination"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:textAlignment="center"
		android:textSize="18sp"
		android:textColor="@color/colorPrimaryDark"
		android:text="@string/gettingFood_sessionInfo_label2_placeholder"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/section_label" />
	
	<TextView
		android:id="@+id/textView8"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="32dp"
		android:text="@string/gettingFood_sessionInfo_label3"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txtSessionDestination" />
	
	<ImageButton
		android:id="@+id/imageButton"
		android:contentDescription="@string/copy"
		android:layout_width="48dp"
		android:layout_height="48dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:background="@drawable/btn_secondary_app"
		android:onClick="copyKeyToClipboard"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView8"
		app:srcCompat="@drawable/ic_content_copy_black_24dp" />
	
	<ImageButton
		android:id="@+id/imageButton2"
		android:contentDescription="@string/share"
		android:layout_width="48dp"
		android:layout_height="48dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:background="@drawable/btn_secondary_app"
		android:onClick="shareKey"
		app:layout_constraintStart_toEndOf="@+id/imageButton"
		app:layout_constraintTop_toBottomOf="@+id/textView8"
		app:srcCompat="@drawable/ic_share_black_24dp" />
	
	<TextView
		android:id="@+id/txtSessionCode"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/gettingFood_sessionInfo_label_code_placeholder"
		android:textAlignment="center"
		android:textColor="@color/colorPrimaryDark"
		android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="@+id/imageButton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/imageButton2"
		app:layout_constraintTop_toBottomOf="@+id/textView8" />

</android.support.constraint.ConstraintLayout>