<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="6dp"
		android:weightSum="2">
		
		<ImageButton
			android:id="@+id/pendingUsers_accept"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:background="@drawable/btn_secondary_app"
			android:contentDescription="@string/approve"
			app:srcCompat="@drawable/ic_check_circle_black_24dp" />
		
		<ImageButton
			android:id="@+id/pendingUsers_deny"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:background="@drawable/btn_secondary_app"
			android:contentDescription="@string/deny"
			app:srcCompat="@drawable/ic_do_not_disturb_alt_black_24dp" />
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1">
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:weightSum="3">
				
				<TextView
					android:id="@+id/txtWanterAdapter_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/placeholder"
					android:textSize="18sp"
					android:textStyle="bold" />
				
				<TextView
					android:id="@+id/txtWanterAdapter_orderListSize"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/placeholder"
					android:textSize="14sp" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

</LinearLayout>