<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.travmahrajvar.bringmefood.FindDeliveryAgents">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@drawable/need_food_bg_gradient">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/mainMenuButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:onClick="displayMenu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_menu_black_24dp" />

                <TextView
                    android:id="@+id/windowTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/want_food"
                    android:textColor="@android:color/white"
                    android:textSize="24dp"
                    app:layout_constraintStart_toEndOf="@+id/mainMenuButton"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="68dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="Find Deliver Agents"/>
        </android.support.v7.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="108dp">

            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:gravity="center_vertical"
                        android:textSize="16dp"
                        android:text="Find Agents By:"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <RadioGroup
                            android:id="@+id/selectionGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <RadioButton
                                android:id="@+id/checkLocation"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/location_radio"
                                android:onClick="searchAgents"
                                android:layout_weight="1"/>

                            <RadioButton
                                android:id="@+id/checkRestaurant"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/restaurant_radio"
                                android:onClick="searchAgents"
                                android:layout_weight="1"/>
                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:gravity="right"
                            android:layout_width="48dp"
                            android:layout_height="48dp">

                            <ImageButton
                                android:id="@+id/btnSearchAgents"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:src="@drawable/ic_search_black_24dp"
                                android:background="@drawable/btn_secondary_app"/>
                        </LinearLayout>

                        <LinearLayout
                            android:gravity="left"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="6dp">

                            <EditText
                                android:id="@+id/txtAgentSearch"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:padding="10dp"
                                android:background="@drawable/btn_secondary_app"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_marginBottom="6dp"
                        android:orientation="vertical">

                        <ListView
                            android:id="@+id/listAgents"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/btn_secondary_app"
                            android:layout_marginTop="8dp"
                            tools:layout_editor_absoluteX="8dp"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>
